fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   position: relative;
   scrollbar-width: none;
   -ms-overflow-style: none;
+  overflow-x: hidden !important;
 }
 
 
